raffia/tests/recoverable/at-rule/keyframes.css.snap
---
source: raffia/tests/recoverable.rs
---
error: unknown keyframe selector
  ┌─ keyframes.css:2:3
  │
2 │   form {}
  │   ^^^^


